- improved `F.cache.removeAll()` by adding support for string array
- fixed empty value in enum validation in JSON Schemas
- improved the `CORS()` method `CORS('https://.., https://..')` that allows only the specific hostnames
- fixed atomic operations in NoSQL QueryBuilder
- added `String.sign(key)` for making of quick checksums

========================
0.0.80
========================

- added `CONF.default_tms_maxlength` option
- improved the `NEWSUBSCRIBE(name, schema, [callback])` method by adding the `callback` argument
- added `inmemory` database support for `QueryBuilder`
- fixed localized filters in `QueryBuilder.autoquery()`
- extended the `schema.action({ ..sa: true }, ...)` method by adding `sa` option
- improved error handling in the `FlowStream`
- fixed parsing inline JSON schemas
- added `wav` as the allowed static file
- added support for the `.ui` file extension (json --> UI builder)

========================
0.0.79
========================

- fixed parsing of nested JSON schemas defined
- fixed `UID` parsing subtype in JSON schemas
- improved error handling in the FlowStream

========================
0.0.78
========================

- fixed `opt.options` argument in the `AUTH()` method
- fixed `secret_tms` (now it can contain a raw number)
- added `QueryBuilder.schema(name)`
- fixed generating filenames via `COMPONENTATOR()` method (added `.min` pharse)
- fixed parsing inline JSON schemas (without defined types) in `schema.action()`
- extended schema `Icon` validator by adding `tic` ([T]otal.js [I]con [C]ustom)

========================
0.0.77
========================

- fixed `permissions` in the `schema.action` (critical)

========================
0.0.76
========================

- updated `COMPONENTATOR(name, components, [removeprev])` by adding `removeprev` argument

========================
0.0.75
========================

- updated `CALL()` response (it returns `Object` instead of `Array`) with multiple actions